[tool.poetry]
name = "encryption-helper"
version = "0.0.1"
description = "A Python CLI application for generating RSA public and private key pairs"
authors = ["sebastien.rousseau-bedouch <sebastien.rousseau-bedouch@hsbc.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
pycryptodome = "^3.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
